--- a/hw3/app/globals.css
+++ b/hw3/app/globals.css
@@ -2,3 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.light {
+    background-color: white;
+    color: black;
+}
+
+.dark {
+    background-color: black;
+    color: white;
+}
